tests/toy/neg/000786_mutation.toylang
program a = { a = program a = { } . 0; } .
